@@ -190,20 +190,20 @@ public class Mesh3 implements IMesh {
                     vertices,
                     vertUsage,
                     vertIdx,
-                    vertSize,
+                    vertDim,
                     vertNormalized,
                     vertStride,
                     colors,
                     colorUsage,
                     colorIdx,
-                    colorSize,
+                    colorDim,
                     colorNormalized,
                     colorStride,
                     texCoords,
                     texture,
                     texUsage,
                     texIdx,
-                    texSize,
+                    texDim,
                     texNormalized,
                     texStride,
                     indices,
