@@ -1,12 +1,16 @@
 0.4.0
-Fixed a bug: IMesh#texSize is 3
+New feature: GLString
+New feature: StbImg
+Changed: *Size -> *Dim
+Changed: Split `AtlasLoom` into `-AWT` and `-STB`
+Fixed a bug: IMesh#texDim is 3
 
 0.3.0
 New feature: Developers can load texture by int array
 New feature: Developers can generate sprite by `AtlasLoom`
 New feature: `GlProgram#vertexAttribPointer`
 Fixed a fatal bug: Program crashed when creating shaders
-    Exception in thread "main" java.lang.RuntimeException: Error compiling shader src: No errors.
+    Exception in thread "main" java.lang.RuntimeException: Error compiling shader src: No errors.\\0
     	at org.overrun.glutils.GlProgram.createShader(GlProgram.java:84)
 
 0.2.0
